# flir_thermal_driver

./: .gitignore  LICENSE  README.md  THERMAL_COLORMAPS.md
src/flir_ros_sync/: 42-flir-ros.rules  CMakeLists.txt  package.xml
src/flir_ros_sync/config/: flir_camera_params.yaml  flir_inspect_camera_params.yaml
src/flir_ros_sync/data/camera_info/example/: thermal_caminfo_flir_640.yaml
src/flir_ros_sync/data/camera_info/mk_1/: thermal_caminfo_mk_1_left.yaml  thermal_caminfo_mk_1_right.yaml
src/flir_ros_sync/data/camera_info/silver_payload/: thermal_caminfo_silver_payload.yaml
src/flir_ros_sync/data/camera_info/wildfire/m600/: down-45.yaml
src/flir_ros_sync/data/camera_info/wildfire/subcanopy-drone-ordv2/: thermal_left.yaml  thermal_right.yaml
src/flir_ros_sync/data/camera_info/yamaha_atv/: thermal_left.yaml  thermal_right.yaml
src/flir_ros_sync/include/flir_ros_sync/: fast_thermal_core.h  fd_guard.h  flir_ros_sync.h  gpu_agc_mapper.h  object_detection.h  thermal_processor.h
src/flir_ros_sync/launch/example/: single_thermal_camera.launch.py  triage.launch.py
src/flir_ros_sync/script/: add_caminfo_to_bag.py  run_ffc.py  set_sync_mode.py  trigger_ffc.py
src/flir_ros_sync/script/Boson_SDK/ClientFiles_C/: Client_Packager.c
src/flir_ros_sync/src/: fast_thermal_core.c  flir_ros_sync.cpp  gpu_agc_mapper.cu  set_sync_mode.cpp  thermal_processor.cpp  thermal_processor_main.cpp
