<?xml version="1.0"?>
<package format="3">
  <name>flir_ros_sync</name>
  <version>0.0.1</version>
  <description>ROS2 node for synchronizing FLIR camera data.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="antonyanovich@cmu.edu">Anton Yanovich</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


   <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>image_geometry</build_depend>
  <build_depend>opencv</build_depend> <!-- OpenCV name may vary -->
  <build_depend>std_msgs</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>opencv</exec_depend> <!-- OpenCV name may vary -->
  <exec_depend>std_msgs</exec_depend>

  <!-- Python dependencies -->
  <build_depend>flirpy</build_depend>
  <build_depend>rclpy</build_depend>

  <exec_depend>flirpy</exec_depend>
  <exec_depend>rclpy</exec_depend>



  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
    <!-- Dependencies for component nodes -->
    <rclcpp_components/>
  </export>

</package>
